--- a/src/screens/AddBlockchain/AddBlockchain.css
+++ b/src/screens/AddBlockchain/AddBlockchain.css
@@ -3,7 +3,7 @@
 }
 
 .add_block_header h5{
-    color: var(--coll_black);
+    color: #D7E1EC;
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 0.5px;
@@ -19,14 +19,14 @@
 .add_block_form label{
     display: block;
     margin-bottom: 10px;
-    color: #242424;
+    color: #888;
     font-weight: 600;
     letter-spacing: 0.05em;
     font-size: 14px;
 }
 
 .add_block_form input{
-    background-color: #eee;
+    background-color: rgba(238,238,238,0.1);
     min-height: 45px;
     width: 100%;
     padding: 10px 15px;
@@ -44,7 +44,7 @@
 
 .add_block_form input:focus{
     outline: none;
-    border: 1px solid var(--coll_blue);
+    border: 1px solid #ff8c68;
 }
 
 /* Collection */
@@ -82,7 +82,7 @@
 }
 
 .add_block_footer a{
-    background-color: #3366FF;
+    background-color: #ff8c68;
     display: inline-block;
     color: #fff;
     text-decoration: none;
