--- a/src/screens/CreateCollection/CreateCollection.css
+++ b/src/screens/CreateCollection/CreateCollection.css
@@ -10,7 +10,7 @@
 }
 
 .view_nft button{
-    background-color: var(--coll_blue);
+    background-color: #ff8c68;
     border: 0px;
     padding: 12px;
     color: var(--coll_white);
@@ -30,17 +30,18 @@
 }
 
 .generate_section a:nth-child(1){
-    background: #EEE;
+    background: rgba(238,238,238,0.2);
     padding: 10px 25px;
     border-radius: 10px;
-    font-weight: 700;
-    letter-spacing: 0.5px;
+    font-weight: 600;
+    letter-spacing: 1px;
     font-size: 14px;
     cursor: pointer;
+    color: #fff;
 }
 
 .generate_section a:nth-child(2){
-    background: var(--coll_blue);
+    background: #ff8c68;
     padding: 10px 17px;
     color: var(--coll_white);
     border-radius: 100px;
@@ -69,7 +70,7 @@
 }
 
 .layer_name label{
-    color: var(--coll_gray);
+    color: #D7E1EC;
     font-weight: 600;
     margin-right: 15px;
     font-size: 14px;
@@ -77,12 +78,14 @@
 }
 
 .layer_name input{
-    background: #eee;
+    background: #2b2f33;
     height: 50px;
     min-width: 60%;
     padding: 10px 15px;
     border: 0px;
     border-radius: 10px;
+    box-shadow: inset 2px 2px 8px rgb(4, 4, 5, 60%);
+    
 }
 
 .layer_name input:focus{
@@ -123,7 +126,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #eee;
+    background-color: rgba(238,238,238,0.2);
     width: 100%;
     height: 154px;
     border-radius: 10px;
@@ -141,7 +144,7 @@
 }
 
 .upload_custom h6{
-    color: var(--coll_gray);
+    color: #d7e1ec;
     font-weight: 600;
     font-size: 14px;
     letter-spacing: 0.5px;
@@ -150,7 +153,7 @@
 .add_layer{
     display: block;
     margin: 0 auto;
-    background: var(--coll_blue);
+    background: #ff8c68;
     padding: 10px 20px;
     border-radius: 100px;
     border: 0px;
