--- a/src/screens/Dashboard/Dashboard.css
+++ b/src/screens/Dashboard/Dashboard.css
@@ -14,22 +14,22 @@
 .connectwallet_header h5{
     font-size: 22px;
     font-weight: 700;
-    color: var(--coll_black);
+    color: #D7E1EC;
     letter-spacing: 0.3px;
     margin-bottom: 5px;
 }
 
 .connectwallet_header p{
-    color: var(--coll_gray);
+    color: #A0A1AC;
     letter-spacing: 0.02em;
     font-weight: 600;
     margin-bottom: 0px;
 }
 
 .select_wallet hr{
-    width: 35%;
+    width: 30%;
     margin: 1.5rem auto;
-    border: 1px dashed rgba(136,136,136,0.6);
+    border: 1px dashed rgba(160, 161, 172, 0.8);
     opacity: 1;
 }
 
@@ -62,7 +62,7 @@
 .network_name img{
     width: 50px;
     height: 50px;
-    border: 1px solid #E5E8EB;
+    border: 1px dashed rgba(215, 225, 236, 0.2);
     border-radius: 100px;
     padding: 10px;
     object-fit: contain;
@@ -71,22 +71,22 @@
 
 .network_name h6{
     margin-bottom: 0px;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 600;
     letter-spacing: 0.5px;
-    color: var(--coll_black);
+    color: #D7E1EC;
 }
 
 .address_list span{
-    color: var(--coll_gray);
+    color: #A0A1AC;
     font-weight: 600;
     letter-spacing: 0.5px;
-    font-size: 15px;
+    font-size: 14px;
     margin-right: 15px;
 }
 
 .address_list img{
-    background: rgba(51,102,255,0.2);
+    background: rgba(255, 140, 104, 0.2);
     width: 30px;
     height: 30px;
     border-radius: 100px;
