--- a/src/screens/Mint/Mint.css
+++ b/src/screens/Mint/Mint.css
@@ -10,12 +10,12 @@
     font-size: 22px;
     font-weight: 700;
     letter-spacing: 0.02em;
-    color: #242424;
+    color: #fff;
     margin-bottom: 35px;
 }
 
 .mint_section p{
-    color: #888;
+    color: #fff;
     font-weight: 600;
     letter-spacing: 0.05em;
     font-size: 16px;
