--- a/src/screens/AddBlockchain/AddBlockchain.css
+++ b/src/screens/AddBlockchain/AddBlockchain.css
@@ -19,7 +19,7 @@
 .add_block_form label{
     display: block;
     margin-bottom: 10px;
-    color: #888;
+    color: #fff;
     font-weight: 600;
     letter-spacing: 0.05em;
     font-size: 14px;
@@ -33,6 +33,7 @@
     max-height: 45px;
     border-radius: 8px;
     border: 0px;
+    color: #fff;
 }
 
 .add_block_form input::placeholder{
@@ -78,10 +79,10 @@
 
 .custom_radio_section label{
     margin-bottom: 0px;
-    color: #888;
+    color: #fff;
 }
 
-.add_block_footer a{
+.add_block_footer a, button{
     background-color: #ff8c68;
     display: inline-block;
     color: #fff;
@@ -105,4 +106,7 @@
     .add_blockchain .card{
         padding: 40px 20px;
     }
+}
+.error{
+    color: #e30c0c;
 }
